Fixed event list flow view on small screens

--- a/src/app/event/components/event-preview/event-preview.component.scss
+++ b/src/app/event/components/event-preview/event-preview.component.scss
@@ -10,9 +10,9 @@ ion-card {
 //     border: 2px solid var(--ion-color-primary)
 // }
 
-ion-card:hover {
-    transform: scale(1.1);
-}
+// ion-card:hover {
+//     transform: scale(1.1);
+// }
 
 ion-card img {
     width: 100%;
